Make compose window not invoke double form submit protection (bug 136906), r=darin, sr=rpotts, a=rjesup